--- a/index.html
+++ b/index.html
@@ -151,9 +151,42 @@
                             <h3 class="book-table__title">رویداد های پیش رو</h3>
                         </div>
                         <div class="book-table__dot"><span></span></div>        
-                          <div class="book-table__main center">
+                          <div class="book-table__main">
                             <div class="swiper-container mySwiper1">
                                 <div class="swiper-wrapper">
+                                  <div class="swiper-slide">
+                                    <div class="book-table__content">
+                                        <div class="book-table__border"></div>
+                                        <div class="book-table__content-titles">
+                                            <h3 class="book-table__content-title">فستیوال خوراک بهار</h3>
+                                            <p class="book-table__content-title-bottom">83/1/5</p>
+                                        </div>
+                                        <p class="book-table__content-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
+                                        <div class="book-table__content-end"></div>
+                                    </div>
+                                  </div>
+                                  <div class="swiper-slide">
+                                    <div class="book-table__content">
+                                        <div class="book-table__border"></div>
+                                        <div class="book-table__content-titles">
+                                            <h3 class="book-table__content-title">فستیوال خوراک بهار</h3>
+                                            <p class="book-table__content-title-bottom">83/1/5</p>
+                                        </div>
+                                        <p class="book-table__content-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
+                                        <div class="book-table__content-end"></div>
+                                    </div>
+                                  </div>
+                                  <div class="swiper-slide">
+                                    <div class="book-table__content">
+                                        <div class="book-table__border"></div>
+                                        <div class="book-table__content-titles">
+                                            <h3 class="book-table__content-title">فستیوال خوراک بهار</h3>
+                                            <p class="book-table__content-title-bottom">83/1/5</p>
+                                        </div>
+                                        <p class="book-table__content-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
+                                        <div class="book-table__content-end"></div>
+                                    </div>
+                                  </div>
                                   <div class="swiper-slide">
                                     <div class="book-table__content">
                                         <div class="book-table__border"></div>
@@ -798,14 +831,9 @@
        <script>
         var swiper = new Swiper(".mySwiper1", {
           slidesPerView: 1,
-          spaceBetween: 30,
+          spaceBetween: 20,
           slidesPerGroup: 1,
-          loop: true,
-          loopFillGroupWithBlank: true,
-          pagination: {
-            el: ".swiper-pagination",
-            clickable: true,
-          },
+          loop:true,
           navigation: {
             nextEl: ".swiper-button-next",
             prevEl: ".swiper-button-prev",
