--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./Css/app.css">
+    
     <title>گرم و سرد</title>
 </head>
 <body>
+   
     <header class="header">
         <div class="container">
-           
             <div class="header__wrapper">
                 <div class="header__dark"></div>
                 <img src="./Images/bg-image/bg1.jpg" class="header-background-image" alt="Background">
@@ -307,7 +308,7 @@
                 </section>
                 <section class="special-select">
                     <div class="container">
-                        <div class="special-select__wrapper center">ب
+                        <div class="special-select__wrapper center">
                             <div class="special-select__left">
                                 <div class="special-select__titles">
                                     <p class="special-select__title-top">انتخاب ویژه</p>
