--- a/index.html
+++ b/index.html
@@ -14,9 +14,78 @@
     <header class="header">
         <div class="container">
             <div class="header__wrapper">
+                <div class="header__cart">
+                    <div class="header__cart-top center">
+                        <h4 class="header__cart-count">سبدخرید شما <span class="header__cart-item">3محصول</span></h4>
+                        <div class="header__cart-esc"><i class="fa-solid fa-x" style="color: #D5AD72;"></i></div>
+
+                    </div>
+                    <div class="header__cart-products ">
+                        <div class="header__cart-product center">
+                            <div class="header__cart-product-left center">
+                                <div class="header__cart-image-container center">
+                                    <div class="header__cart-number">1</div>
+                                    <img class="header__cart-image" src="./Images/cart.jpg">
+                                </div>
+                                <div class="header__cart-information">
+                                    <p class="header__cart-name">چلو کباب</p>
+                                    <p class="headear__cart-prices">$45<span class="header__cart-price">x1</span></p>
+                                </div>
+                            </div>
+                            <div class="header__cart-product-right"><i class="fa-solid fa-x" style="color: #D5AD72;"></i></div>
+                        </div>
+                        <div class="header__cart-product center">
+                            <div class="header__cart-product-left center">
+                                <div class="header__cart-image-container center">
+                                    <div class="header__cart-number">1</div>
+                                    <img class="header__cart-image" src="./Images/cart.jpg">
+                                </div>
+                                <div class="header__cart-information">
+                                    <p class="header__cart-name">چلو کباب</p>
+                                    <p class="headear__cart-prices">$45<span class="header__cart-price">x1</span></p>
+                                </div>
+                            </div>
+                            <div class="header__cart-product-right"><i class="fa-solid fa-x" style="color: #D5AD72;"></i></div>
+                        </div>
+                        <div class="header__cart-product center">
+                            <div class="header__cart-product-left center">
+                                <div class="header__cart-image-container center">
+                                    <div class="header__cart-number">1</div>
+                                    <img class="header__cart-image" src="./Images/cart.jpg">
+                                </div>
+                                <div class="header__cart-information">
+                                    <p class="header__cart-name">چلو کباب</p>
+                                    <p class="headear__cart-prices">$45<span class="header__cart-price">x1</span></p>
+                                </div>
+                            </div>
+                            <div class="header__cart-product-right"><i class="fa-solid fa-x" style="color: #D5AD72;"></i></div>
+                        </div>
+                        <div class="header__cart-product center">
+                            <div class="header__cart-product-left center">
+                                <div class="header__cart-image-container center">
+                                    <div class="header__cart-number">1</div>
+                                    <img class="header__cart-image" src="./Images/cart.jpg">
+                                </div>
+                                <div class="header__cart-information">
+                                    <p class="header__cart-name">چلو کباب</p>
+                                    <p class="headear__cart-prices">$45<span class="header__cart-price">x1</span></p>
+                                </div>
+                            </div>
+                            <div class="header__cart-product-right"><i class="fa-solid fa-x" style="color: #D5AD72;"></i></div>
+                        </div>
+                        
+                    </div>
+                    <div class="header__cart-total-price center">
+                        <p class="header__cart-total">جمع کل :</p>
+                        <p class="header__cart-money">$356</p>
+                    </div>
+                    <div class="header__cart-buttons center">
+                        <div class="header__cart-button">پرداخت</div>
+                        <div class="header__cart-button"> سبدخرید</div>
+                    </div>
+                </div>
                 <div class="header__dark"></div>
                 <img src="./Images/bg-image/bg1.jpg" class="header-background-image" alt="Background">
-
                 <nav class="nav">
                     <div class="nav__wrapper center">
                       
