--- a/index.html
+++ b/index.html
@@ -192,13 +192,14 @@
                             <div class="book-table__dot"><span></span></div> 
                         </div>
                         <div class="table__form contact-us-section__form">
-                            <div class="contact-us-section__inputs">
-                                <input placeholder="نام" type="text" class="contact-us-section__input">
-                                <input placeholder="نام خانوادگی" type="text" class="contact-us-section__input input-right">
-                                <input placeholder="شماره تلفن" type="text" class="contact-us-section__input ">
-                                <input placeholder="ایمیل" type="text" class="contact-us-section__input input-right">
-                            </div>
-                            <textarea placeholder="سخن شما"  class="contact-us-section__input-text-area"></textarea>
+                                <form class="contact-us-section__inputs">
+                                    <input value="fsdfsd" id="name" placeholder="نام" type="text" class="contact-us-section__input" />
+                                    <input id="family" placeholder="نام خانوادگی" type="text" class="contact-us-section__input input-right" />
+                                    <input id="phone" placeholder="شماره تلفن" type="text" class="contact-us-section__input" />
+                                    <input id="email" placeholder="ایمیل" type="text" class="contact-us-section__input input-right" />
+                                </form>
+                                
+                            <textarea id="description" placeholder="سخن شما"  class="contact-us-section__input-text-area"></textarea>
                             <div class="table__button">رزور میز</div>
                         </div>
                     </div>
