--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
                             </p>
                             <p class="blog-page__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز</p>
                         </div>
-                        <div class="blog-page__button">ادامه مطلب</div>
+                        <div class="blog-page__button"><a href="file:///C:/Users/ManiPr/Desktop/Programming/Hot%20And%20Cold/blog-deatail.html">ادامه سخن</a></div>
                     </div>
                 </div>
                 <div class="blog-page__blog">
@@ -47,7 +47,7 @@
                             </p>
                             <p class="blog-page__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز</p>
                         </div>
-                        <div class="blog-page__button">ادامه مطلب</div>
+                        <div class="blog-page__button"><a href="file:///C:/Users/ManiPr/Desktop/Programming/Hot%20And%20Cold/blog-deatail.html">ادامه سخن</a></div>
                     </div>
                 </div>
                 <div class="blog-page__blog">
@@ -63,7 +63,7 @@
                             </p>
                             <p class="blog-page__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز</p>
                         </div>
-                        <div class="blog-page__button">ادامه مطلب</div>
+                        <div class="blog-page__button"><a href="file:///C:/Users/ManiPr/Desktop/Programming/Hot%20And%20Cold/blog-deatail.html">ادامه سخن</a></div>
                     </div>
                 </div>
                 <div class="blog-page__blog">
@@ -79,7 +79,7 @@
                             </p>
                             <p class="blog-page__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز</p>
                         </div>
-                        <div class="blog-page__button">ادامه مطلب</div>
+                        <div class="blog-page__button"><a href="file:///C:/Users/ManiPr/Desktop/Programming/Hot%20And%20Cold/blog-deatail.html">ادامه سخن</a></div>
                     </div>
                 </div>
                 <div class="blog-page__blog">
@@ -95,7 +95,7 @@
                             </p>
                             <p class="blog-page__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز</p>
                         </div>
-                        <div class="blog-page__button">ادامه مطلب</div>
+                        <div class="blog-page__button"><a href="file:///C:/Users/ManiPr/Desktop/Programming/Hot%20And%20Cold/blog-deatail.html">ادامه سخن</a></div>
                     </div>
                 </div>
                 <div class="blog-page__blog">
@@ -111,7 +111,7 @@
                             </p>
                             <p class="blog-page__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز</p>
                         </div>
-                        <div class="blog-page__button">ادامه مطلب</div>
+                        <div class="blog-page__button"><a href="file:///C:/Users/ManiPr/Desktop/Programming/Hot%20And%20Cold/blog-deatail.html">ادامه سخن</a></div>
                     </div>
                 </div>
             </div>
