--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             <div class="header-content__left">
                                 <p class="header-content__info">دارای بهترین خدمات و برترین خوراک ها</p>
                                 <div class="header-content__title">به میخواهم بخورم خوش آمدید رستوران برتر شما</div>
-                                <button class="header-content__button">در منوی ما جستجو کنید</button>
+                                <button class="header-content__button"><a href="file:///C:/Users/ManiPr/Desktop/Programming/Hot%20And%20Cold/menu.html">درمنوی ما جستجو کنید</a></button>
                             </div>
                         </div>
                          
@@ -161,12 +161,11 @@
                 <div class="menu-static__wrapper">
                     <div class="section-comment__dot"><span class="sectoin-comment-span"></span></div>
                     <ul class="menu-static__lists center">
-                        <li class="menu-static__list">خانه</li>
-                        <li class="menu-static__list">منو</li>
-            
-                        <li class="menu-static__list">درباره ما</li>
-                        <li class="menu-static__list">تماس باما</li>
-                        <li class="menu-static__list">بلاگ</li>
+                        <li class="menu-static__list"><a href="file:///C:/Users/ManiPr/Desktop/Programming/Hot%20And%20Cold/index.html">خانه</a></li>
+                        <li class="menu-static__list"><a href="file:///C:/Users/ManiPr/Desktop/Programming/Hot%20And%20Cold/menu.html">منو</a></li>
+                        <li class="menu-static__list"><a href="file:///C:/Users/ManiPr/Desktop/Programming/Hot%20And%20Cold/about%20us.html">درباره ما</a></li>
+                        <li class="menu-static__list"><a href="file:///C:/Users/ManiPr/Desktop/Programming/Hot%20And%20Cold/contact-us.html">تماس باما</a></li>
+                        <li class="menu-static__list"><a href="file:///C:/Users/ManiPr/Desktop/Programming/Hot%20And%20Cold/blog.html">بلاگ</a></li>
                     </ul>
                     <div class="section-comment__dot section-comment__dot--menu"><span class="sectoin-comment-span"></span></div>
                     <div class="menu-static__socials center">
