--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,30 @@
                     <i class="blog-page__icon fa fa-search" aria-hidden="true"></i>
                 </div>
             </div>
+            <div class="blog-page__top-bar">
+                <div class="blog-page__top-bar-wrapper">
+                    <div class="blog-page__content-list__titles center">
+                        <h3 class="blog-page__content-list-title">دسته بندی</h3>
+                        <h3 class="blog-page__content-list-title">دسته بندی</h3>
+                    </div>
+                    <div class="blog-page__contents center">
+                       
+                        <ul class="blog-page__content-lists center">
+                            <li class="blog-page__content-list">رستوران</li>
+                            <li class="blog-page__content-list">دسر</li>
+                            <li class="blog-page__content-list">نوشیدنی</li>
+                            <li class="blog-page__content-list">جدید</li>
+                        </ul>
+                        <ul class="blog-page__content-lists center">
+                            <li class="blog-page__content-list">غذا ها</li>
+                            <li class="blog-page__content-list">رویداد ها</li>
+                            <li class="blog-page__content-list">نوشیدنی</li>
+                            <li class="blog-page__content-list">جدید</li>
+                        </ul>
+                    </div>
+                </div>
+            
+            </div>
             <div class="blog-page__blogs">
                 <div class="blog-page__blog">
                     <div class="blog-page__image-container">
@@ -117,5 +141,6 @@
             </div>
         </div>
     </div>
+    <script src="./Js/index.js"></script>
 </body>
 </html>
