--- a/about us.html
+++ b/about us.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href='./Css/about-us.css'>
 </head>
 <body>
+    <div class="about-us-page__shadow"></div>
+
     <div class="about-us-page">
         <div class="about-us-page__main">
             <section class="about-us">
@@ -194,6 +196,13 @@
                         <div class="section-galllery__button">از منوی ما دیدن کنید</div>
                         <div class="section-comment__dot"><span class="sectoin-comment-span"></span></div>
                     </div>
+                    <div class="section-gallery__big">
+                        <div class="section-gallery__big-container-image">
+                            <img class="sectoin-gallery__big-image" src="#">
+                            <i class="section-gallery__icon-f fa-solid fa-x section-gallery__close-icon"></i>
+                        </div>
+                    </div>
+
                 </div>
             </section>
             <section class="pro-video">
