--- a/blog.html
+++ b/blog.html
@@ -25,16 +25,16 @@
                     <div class="blog-page__contents center">
                        
                         <ul class="blog-page__content-lists center">
-                            <li data-content-id="رستوران" class="blog-page__content-list">رستوران</li>
-                            <li data-content-id="دسر" class="blog-page__content-list">دسر</li>
-                            <li data-content-id="نوشیدنی" class="blog-page__content-list">نوشیدنی</li>
-                            <li data-content-id="جدید" class="blog-page__content-list">جدید</li>
+                            <li data-content-id="1" class="blog-page__content-list">رستوران</li>
+                            <li data-content-id="2" class="blog-page__content-list">دسر</li>
+                            <li data-content-id="3" class="blog-page__content-list">نوشیدنی</li>
+                            <li data-content-id="4" class="blog-page__content-list">جدید</li>
                         </ul>
                         <ul class="blog-page__content-lists center">
-                            <li data-content-id="غذا" class="blog-page__content-list">غذا ها</li>
-                            <li data-content-id="رویداد" class="blog-page__content-list">رویداد ها</li>
-                            <li data-content-id="نوشیدنی" class="blog-page__content-list">نوشیدنی</li>
-                            <li data-content-id="جدید" class="blog-page__content-list">جدید</li>
+                            <li data-content-id="1" class="blog-page__content-list">غذا ها</li>
+                            <li data-content-id="2" class="blog-page__content-list">رویداد ها</li>
+                            <li data-content-id="3" class="blog-page__content-list">نوشیدنی</li>
+                            <li data-content-id="4" class="blog-page__content-list">جدید</li>
                         </ul>
                     </div>
                 </div>
